@@ -1,6 +1,6 @@
 EBUILD cl-kde-meta-4.4.4-r1.ebuild 3754 RMD160 8b9245fcf0c1f67d88d9799f912a5f553f192a99 SHA1 6080812bfd295059cb6e4b2cd806e1e9890f68d7 SHA256 90f66ceb566cebba86a4f45fdeda2d009048daaf3f0f263515b5c4b0e98d0525
 EBUILD cl-kde-meta-4.5.1-r4.ebuild 3895 RMD160 bf8db31f93eb17ab48fa96449c0ae21e92f3f688 SHA1 75be6ca244b5974f8f0b396db5fbf4d832cdc409 SHA256 5c16ee9e9c66b9133d30baf4515e6d39d42066f45b8a6b4a68703ac0e9f37c2e
-EBUILD cl-kde-meta-4.6.0-r4.ebuild 6306 RMD160 e515f04026cdc0debc92d83079da484a9867b029 SHA1 a8f5b4b59e07e942d0e16232efef208ba51fa890 SHA256 69cc0915af00b054fc5b50c561bdfc4154a0ca9e3d1308333dbd75e7961957ad
-EBUILD cl-kde-meta-4.6.0-r5.ebuild 6258 RMD160 273a320a64972c1251a2bd52f79620e6232451ea SHA1 983dbf0092635c09028cd446c20c561049b76eae SHA256 665530016cafb9974d13051a386b253137e80c4e51c77ae9aeb774f479520b52
-EBUILD cl-kde-meta-4.7.0-r2.ebuild 6422 RMD160 cd3a4547b943c0088a4d648c76d584349c69568f SHA1 e1121c7d4c9ef5fbfb1f8c8963fdc08f105a1a63 SHA256 aafc66c91187843c9338d9c18fba56a508cbf32e36a85e06909cb028d955209e
-MISC ChangeLog 2646 RMD160 9681ef228765c2bb6bc64bb0c796ac28f5c54b46 SHA1 3bde0773e50b87920a4ca740ab4e048121c66726 SHA256 2d47b9e20cf731fa09c8f9dffa3fec177a73a1a12f78d756f13405ced670d67f
+EBUILD cl-kde-meta-4.6.0-r5.ebuild 6305 RMD160 85c5af1421d0199ba78531c83f63ade88a99064f SHA1 aecfd62cf620ef564168c9c7df193897db63f495 SHA256 f29056238f95789f2f3172df6ef1e9228992cb48dec2631a3ae802e817aadf2e
+EBUILD cl-kde-meta-4.6.0-r6.ebuild 6257 RMD160 777839466afdf22199e5e1d80baa663d582f4626 SHA1 2d62611dd15b124b5f979a7b6ddef3616ba14871 SHA256 0e524896a2969abcc7de03cd0c816a3d2d74f0332e0a68516eef3f3316c13d94
+EBUILD cl-kde-meta-4.7.0-r3.ebuild 6421 RMD160 d98e57498b825bf55fb5ca1b366bb4e0f76a6971 SHA1 406c006a6b834f74d289ab00f1931f5797a86e37 SHA256 4173ccee02f15733dcefcdceb03ab0896ede19529f73fb58422b5861251415ad
+MISC ChangeLog 2963 RMD160 3b5c5632ff5e578b4a442750cfb8b4f1995a4911 SHA1 7f66d7bfaba8b4fbb85acb5228a7cecc54a9a943 SHA256 a54037f896169a2c1ab5e615a0aa1956ef8235b0fea67c319da5c57ae375b543
