@@ -2,6 +2,15 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-kde-meta-4.7.0-r3 (29 Aug 2011)
+*cl-kde-meta-4.6.0-r6 (29 Aug 2011)
+
+  29 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-kde-meta-4.6.0-r4.ebuild, cl-kde-meta-4.6.0-r5.ebuild,
+  +cl-kde-meta-4.6.0-r6.ebuild, -cl-kde-meta-4.7.0-r2.ebuild,
+  +cl-kde-meta-4.7.0-r3.ebuild:
+  remote kde-base/krfb
+
 *cl-kde-meta-4.7.0-r2 (23 Aug 2011)
 
   23 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
